force-app/main/default/objects/Contract/fields/Aggregator_discount__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregator Discount</label>
    <type>Checkbox</type>
</CustomField>