force-app/main/default/objects/Contract/fields/Aggregator_Group__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Group__c</fullName>
    <description>If this account is part of an aggregate sale please fill out which group they belong to.</description>
    <inlineHelpText>If this account is part of an aggregate sale please fill out which group they belong to.</inlineHelpText>
    <label>Aggregator Group</label>
    <type>TextArea</type>
</CustomField>