force-app/main/default/objects/Contract/fields/Aggregator_Name__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Aggregator Name is carried over from the related Opportunity into this Contract.</inlineHelpText>
    <label>Aggregator Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>