force-app/main/default/objects/Contract/fields/Agreement_Types__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Types__c</fullName>
    <label>Agreement Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blanket Guarantee</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>E-signature Repurchase</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Guarantee-only</fullName>
            </value>
            <value>
                <fullName>Holder Agreement</fullName>
            </value>
            <value>
                <fullName>Auto -Renewal</fullName>
            </value>
            <value>
                <fullName>Conversion to Monthly/Annual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>