force-app/main/default/objects/Contract/fields/ASA_Review__c.field-meta.xml
<CustomField>
    <fullName>ASA_Review__c</fullName>
    <description>The date ASA began reviewing school edits</description>
    <label>ASA Review</label>
    <type>Date</type>
</CustomField>