force-app/main/default/objects/Contract/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10,000</fullName>
            </value>
            <value>
                <fullName>15,000</fullName>
            </value>
            <value>
                <fullName>25,000</fullName>
            </value>
            <value>
                <fullName>30,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>