force-app/main/default/objects/Contract/fields/Cancellation_Termination_Provision__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Termination_Provision__c</fullName>
    <description>Is there a cancellation or termination provision in the contract?  If yes please explain in the Provision Detail field</description>
    <label>Cancellation/Termination Provision?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (explain below)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>