force-app/main/default/objects/Contract/fields/Contact_Tel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tel__c</fullName>
    <label>Contact Tel</label>
    <type>Phone</type>
</CustomField>