force-app/main/default/objects/Contract/fields/Contract_Requests__c.field-meta.xml
<CustomField>
    <fullName>Contract_Requests__c</fullName>
    <description>Please select all that apply</description>
    <label>Contract Requests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Deferred Payment</fullName>
            </value>
            <value>
                <fullName>Alternative Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Training included</fullName>
            </value>
            <value>
                <fullName>State Contract Required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>