force-app/main/default/objects/Contract/fields/Contract_Stat__c.field-meta.xml
<CustomField>
    <fullName>Contract_Stat__c</fullName>
    <formula>TEXT(Opportunity__r.Contract_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>