force-app/main/default/objects/Contract/fields/Contract_Status_Not_Used__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Not_Used__c</fullName>
    <label>Contract Status-Not Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Requested</fullName>
            </value>
            <value>
                <fullName>Contract Requested</fullName>
            </value>
            <value>
                <fullName>Contract submitted to school</fullName>
            </value>
            <value>
                <fullName>ASA Review school edits</fullName>
            </value>
            <value>
                <fullName>School Review ASA edits</fullName>
            </value>
            <value>
                <fullName>Agreement Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>