force-app/main/default/objects/Contract/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <description>Takes the maximum of Invoice Frequency from Contract Lines, required to calculate the Service Period End date on Sales Invoice. - GS Development Team</description>
    <label>Invoice Frequency</label>
    <summarizedField>Contract_Lines__c.Invoice_Freq__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Lines__c.Unit_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Lines__c.Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>