force-app/main/default/objects/Contract/fields/Invoice_has_been_created__c.field-meta.xml
<CustomField>
    <fullName>Invoice_has_been_created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically turned on when invoice has been generated.  Then automatically turned off awaiting next invoice date.</inlineHelpText>
    <label>Invoice has been created</label>
    <type>Checkbox</type>
</CustomField>