force-app/main/default/objects/Contract/fields/Is_Penalty_Charge__c.field-meta.xml
<CustomField>
    <fullName>Is_Penalty_Charge__c</fullName>
    <description>Is there a penalty charge for early termination of this contract if so please complete the dollar amount in &quot;Penalty Charge&quot; field (currency)</description>
    <label>Is there a Penalty Charge?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>