force-app/main/default/objects/Contract/fields/Key_Date_s__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_s__c</fullName>
    <description>Any  Key Ticker dates for renewal, rollover, or termination, has a work flow attached</description>
    <label>Key Date(s)</label>
    <type>Date</type>
</CustomField>