force-app/main/default/objects/Contract/fields/Legal_approved__c.field-meta.xml
<CustomField>
    <fullName>Legal_approved__c</fullName>
    <label>Legal approved</label>
    <type>DateTime</type>
</CustomField>