force-app/main/default/objects/Contract/fields/Legal_ASA_Employee_Info__c.field-meta.xml
<CustomField>
    <fullName>Legal_ASA_Employee_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legal contract field_ASA_Employee_Info</description>
    <label>ASA Employee Info</label>
    <type>Checkbox</type>
</CustomField>