force-app/main/default/objects/Contract/fields/Legal_Contract_Reevaluation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Reevaluation__c</fullName>
    <description>Has the contract been reevaluated, if date box is filled then it has.</description>
    <label>Contract Reevaluation</label>
    <type>Date</type>
</CustomField>