force-app/main/default/objects/Contract/fields/Legal_Contract_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are there any special restrictions on this contract if so please list them in the description text box.</description>
    <label>Contract Restrictions</label>
    <type>Checkbox</type>
</CustomField>