force-app/main/default/objects/Contract/fields/Legal_Privacy_Review__c.field-meta.xml
<CustomField>
    <fullName>Legal_Privacy_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>After reveiw of Contract and has been blessed by the Privacy Specilist box should be checked.</description>
    <label>Privacy Review</label>
    <type>Checkbox</type>
</CustomField>