force-app/main/default/objects/Contract/fields/Legal_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Status__c</fullName>
    <label>Review Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>NPI_Provided__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Waiting Further Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>