force-app/main/default/objects/Contract/fields/Legal_Security_Review__c.field-meta.xml
<CustomField>
    <fullName>Legal_Security_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>After contract is blessed by the ISD elcetronic security rep, can be check off.</description>
    <label>Security Review</label>
    <type>Checkbox</type>
</CustomField>