force-app/main/default/objects/Contract/fields/Legal_Sensitive_ASA_Information__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sensitive_ASA_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive ASA Info.</label>
    <type>Checkbox</type>
</CustomField>