force-app/main/default/objects/Contract/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <description>Next invoice date on contract header is earliest date on contract line</description>
    <inlineHelpText>Next invoice date on contract header is earliest date on contract line</inlineHelpText>
    <label>Next Invoice Date</label>
    <summarizedField>Contract_Lines__c.Next_Invoice_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Lines__c.Remaining_Invoices__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Lines__c.Contract__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>