force-app/main/default/objects/Contract/fields/NPI_Provided__c.field-meta.xml
<CustomField>
    <fullName>NPI_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will the Vendor have access to non public information YES/NO</description>
    <label>NPI Access</label>
    <type>Checkbox</type>
</CustomField>