force-app/main/default/objects/Contract/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <description>Shows the link URL to the Opportunity associated to the Contract.</description>
    <inlineHelpText>Shows the link URL to the Opportunity associated to the Contract.</inlineHelpText>
    <label>Opportunity Link</label>
    <type>Url</type>
</CustomField>