force-app/main/default/objects/Contract/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Misc agreements</description>
    <label>Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>