force-app/main/default/objects/Contract/fields/Penalty_Charge__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Charge__c</fullName>
    <description>If there is a penalty charge what is the amount</description>
    <label>Penalty Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>