force-app/main/default/objects/Contract/fields/Periodic_Calc_Descript__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Calc_Descript__c</fullName>
    <description>Describe the calculations of periodic payments including Fees the freguency and timing of payments</description>
    <label>Periodic Calc Description</label>
    <type>TextArea</type>
</CustomField>