force-app/main/default/objects/Contract/fields/Periodic_Payments__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the contract include periodic payments, if so please describe.</description>
    <label>Periodic Payments?</label>
    <type>Checkbox</type>
</CustomField>