force-app/main/default/objects/Contract/fields/Provision_Detail__c.field-meta.xml
<CustomField>
    <fullName>Provision_Detail__c</fullName>
    <description>Explain the Cancellation or Termination Provisions in the contract</description>
    <label>Provision Details</label>
    <type>TextArea</type>
</CustomField>