force-app/main/default/objects/Contract/fields/Ready_to_Create_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Create_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically flagged when a contract line reaches it&#39;s Next Invoice Date</inlineHelpText>
    <label>Ready to Create Invoice</label>
    <type>Checkbox</type>
</CustomField>