force-app/main/default/objects/Contract/fields/Renewal_activation_discount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_activation_discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal activation discount</label>
    <type>Checkbox</type>
</CustomField>