force-app/main/default/objects/Contract/fields/Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Terms__c</fullName>
    <description>Are there special renewal terms or options associated with this contract?</description>
    <label>Renewal Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>