force-app/main/default/objects/Contract/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Auto-populated, shows the last invoice that was created from this Contract</inlineHelpText>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>