force-app/main/default/objects/Contract/fields/School_Review__c.field-meta.xml
<CustomField>
    <fullName>School_Review__c</fullName>
    <description>The date the school began reviewing ASA edits</description>
    <label>School Review</label>
    <type>Date</type>
</CustomField>