force-app/main/default/objects/Contract/fields/Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_By__c</fullName>
    <description>Sr. Staff that have signing abilities</description>
    <label>Signed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clara Serpa</fullName>
            </value>
            <value>
                <fullName>Debra Chromy</fullName>
            </value>
            <value>
                <fullName>Janine Greenwood</fullName>
            </value>
            <value>
                <fullName>Larry O&#39;Connell</fullName>
            </value>
            <value>
                <fullName>Lauren Rolfe</fullName>
            </value>
            <value>
                <fullName>Michael Finn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paul Combe</fullName>
            </value>
            <value>
                <fullName>Rick Rindini</fullName>
            </value>
            <value>
                <fullName>Stephen Wong</fullName>
            </value>
            <value>
                <fullName>Sue Nathan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>