force-app/main/default/objects/Contract/fields/Signed_Copy_File__c.field-meta.xml
<CustomField>
    <fullName>Signed_Copy_File__c</fullName>
    <label>Signed Copy File</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes (Copy)</fullName>
            </value>
            <value>
                <fullName>Yes (Original)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>