force-app/main/default/objects/Contract/fields/Submitted_to_School__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_School__c</fullName>
    <description>Date the contract was submitted to the school</description>
    <label>Submitted to School</label>
    <type>Date</type>
</CustomField>