force-app/main/default/objects/Contract/fields/Term_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Contract__c</fullName>
    <description>What is the term of the contracts renewal policy?</description>
    <label>Term of Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Renewal (same term)</fullName>
            </value>
            <value>
                <fullName>Conversion to Monthly</fullName>
            </value>
            <value>
                <fullName>Conversion to Annual</fullName>
            </value>
            <value>
                <fullName>Options (explain below)</fullName>
            </value>
            <value>
                <fullName>Other (explain below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>