force-app/main/default/objects/Contract/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email (PDF)</fullName>
            </value>
            <value>
                <fullName>Over-night Mail</fullName>
            </value>
            <value>
                <fullName>Standard Mail</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>