force-app/main/default/objects/Contract/fields/Tracking_Number2__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number2__c</fullName>
    <label>Tracking#-2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>