force-app/main/default/objects/Contract/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking #</label>
    <length>70</length>
    <type>Text</type>
</CustomField>