force-app/main/default/objects/Contract/recordTypes/ContractInternaltoVendor.recordType-meta.xml
<RecordType>
    <fullName>ContractInternaltoVendor</fullName>
    <active>true</active>
    <description>Use this record for ASA Assosiate contracting with an outside vendor</description>
    <label>Contract - Internal to Vendor</label>
</RecordType>