force-app/main/default/objects/Contract/recordTypes/ContractOneTimeNonRenewable.recordType-meta.xml
<RecordType>
    <fullName>ContractOneTimeNonRenewable</fullName>
    <active>true</active>
    <description>This type for one time contracts i.e. reastaurant, hotel,</description>
    <label>Contract - One Time - Non-Renewable</label>
</RecordType>