force-app/main/default/objects/Contract/recordTypes/LenderServicerContract.recordType-meta.xml
<RecordType>
    <fullName>LenderServicerContract</fullName>
    <active>false</active>
    <description>Contacts for Lender(s) and Servicer(s) used by the Lender Account Executive</description>
    <label>Lender/Servicer Contract</label>
</RecordType>