force-app/main/default/objects/Contract/recordTypes/School_Contract.recordType-meta.xml
<RecordType>
    <fullName>School_Contract</fullName>
    <active>true</active>
    <description>SALT Contract</description>
    <label>School Contract</label>
</RecordType>