force-app/main/default/objects/Contract/listViews/Contracts_with_Oppty.listView-meta.xml
<ListView>
    <fullName>Contracts_with_Oppty</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contracts with Oppty</label>
</ListView>