force-app/main/default/objects/Contract/listViews/LenderSetUpStatus.listView-meta.xml
<ListView>
    <fullName>LenderSetUpStatus</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>notEqual</operation>
        <value>Agreement Execution,Contract Authorized</value>
    </filters>
    <label>Lender Set Up Status</label>
</ListView>