force-app/main/default/objects/Contract/listViews/Mycontracts1.listView-meta.xml
<ListView>
    <fullName>Mycontracts1</fullName>
    <columns>CONTRACT.STATUS_CODE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My contracts 1</label>
</ListView>