force-app/main/default/objects/Contract/listViews/Ready_to_create_Invoices.listView-meta.xml
<ListView>
    <fullName>Ready_to_create_Invoices</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Ready_to_Create_Invoice__c</columns>
    <columns>Next_Invoice_Date__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_to_Create_Invoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Next_Invoice_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Ready to create Invoices</label>
    <sharedTo>
        <role>TopLevel</role>
    </sharedTo>
</ListView>